Bug 120596 - [GTK] New CSS3 refhtml tests are failing after r154875.
Summary: [GTK] New CSS3 refhtml tests are failing after r154875.
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Tools / Tests (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords: InRadar
Depends on: 119324
Blocks: 87008
  Show dependency treegraph
 
Reported: 2013-09-02 02:06 PDT by Ádám Kallai
Modified: 2022-11-09 06:54 PST (History)
9 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Comment 1 Dirk Schulze 2013-09-02 02:44:11 PDT
Background spacing just works if it is implemented in the platform code. For now these tests are expected to fail.
Comment 2 Ádám Kallai 2013-09-02 02:45:54 PDT
Ohh I see. Thanks for your information.
Comment 3 Ádám Kallai 2013-09-03 06:59:59 PDT
Skipped in: http://trac.webkit.org/changeset/154980.
Comment 4 Ádám Kallai 2013-09-03 07:04:22 PDT
(In reply to comment #3)
> Skipped in: http://trac.webkit.org/changeset/154980.
Another part of them skipped in: http://trac.webkit.org/changeset/154956.
Comment 5 Marcos Chavarría Teijeiro (irc: chavaone) 2015-03-13 03:19:35 PDT
css3/masking/mask-repeat-space-padding.html is passing on GTK after r177494. This revision changes the test and the expected file.

Updating GTK Test Expectations on https://bugs.webkit.org/show_bug.cgi?id=142665
Comment 6 Vitaly Dyackhov 2022-11-07 01:03:33 PST
Pull request: https://github.com/WebKit/WebKit/pull/6201
Comment 7 EWS 2022-11-09 06:53:24 PST
Committed 256484@main (f8b2bfb13b83): <https://commits.webkit.org/256484@main>

Reviewed commits have been landed. Closing PR #6201 and removing active labels.
Comment 8 Radar WebKit Bug Importer 2022-11-09 06:54:21 PST
<rdar://problem/102140605>