[WPE][GTK] Implement `background-repeat: space` using cairo. https://bugs.webkit.org/show_bug.cgi?id=120596

Drawing a repeating background in cairo is done by creating a pattern
from the background image and then extending it.

When `background-repeat` property is set to `space`, cairo drawing
routine is provided with the calculated spacing value that must be
applied while extending the pattern.

Unfortunately, cairo doesn't support extending a pattern beyond its
boundaries. To achieve a similar effect we create a temporary pattern
that incorporates the original image and the spacing and then extend it.

Reviewed by Carlos Garcia Campos.

* LayoutTests/platform/gtk/TestExpectations:
* LayoutTests/platform/wpe/TestExpectations:
* Source/WebCore/platform/graphics/cairo/CairoOperations.cpp:
(WebCore::Cairo::drawPattern):
* Source/WebCore/platform/graphics/cairo/CairoOperations.h:
* Source/WebCore/platform/graphics/cairo/CairoUtilities.cpp:
(WebCore::drawPatternToCairoContext):
* Source/WebCore/platform/graphics/cairo/CairoUtilities.h:
* Source/WebCore/platform/graphics/cairo/GraphicsContextCairo.cpp:
(WebCore::GraphicsContextCairo::drawPattern):
* Source/WebCore/platform/graphics/nicosia/cairo/NicosiaCairoOperationRecorder.cpp:
(Nicosia::CairoOperationRecorder::drawPattern):

Canonical link: https://commits.webkit.org/256484@main